[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "HypixelPlayerApi"
version = "1.0.4"
authors = [
  { name="Keshav Verma", email="vkeshav300@gmail.com" },
]
description = "A package that you can use to get the data of a player in hypixel, and hypixel skyblock."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Natural Language :: English",
]

[project.urls]
"Homepage" = "https://github.com/vkeshav300/PlayerApiContact/"
"Bug Tracker" = "https://github.com/vkeshav300/PlayerApiContact/issues/"
"Releases" = "https://github.com/vkeshav300/PlayerApiContact/releases/"
